risolto bug arraylist nulle con get(0)